--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube埋め込みツール</title>
+  <title>汎用リンク埋め込みツール</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -47,73 +47,69 @@
       margin-top: 20px;
       border-radius: 8px;
     }
-    #videoContainer {
+    #embedContainer {
       margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>YouTube動画埋め込みツール</h1>
+  <h1>汎用リンク埋め込みツール</h1>
   <div class="link-area">
-    <p>以下にYouTubeリンクを貼り付けて、「動画を表示」をクリックしてください。</p>
-    <input type="text" id="youtubeLink" placeholder="YouTubeリンクを入力" />
-    <button onclick="embedVideo()">動画を表示</button>
+    <p>リンクを貼り付けて、「埋め込み表示」をクリックしてください。</p>
+    <input type="text" id="inputLink" placeholder="URLを入力" />
+    <button onclick="embedContent()">埋め込み表示</button>
   </div>
 
-  <div id="videoContainer">
-    <!-- 埋め込み動画がここに表示されます -->
+  <div id="embedContainer">
+    <!-- 埋め込みコンテンツがここに表示されます -->
   </div>
 
   <script>
-    // ページ読み込み時にローカルストレージからリンクを取得
-    window.onload = function () {
-      const savedLink = localStorage.getItem("youtubeLink");
-      if (savedLink) {
-        embedVideo(savedLink);
-      }
-    };
+    function embedContent() {
+      const input = document.getElementById("inputLink");
+      const embedContainer = document.getElementById("embedContainer");
+      const originalLink = input.value.trim();
 
-    // YouTube動画を埋め込む関数
-    function embedVideo(link = null) {
-      const input = document.getElementById("youtubeLink");
-      const videoContainer = document.getElementById("videoContainer");
-      const videoLink = link || input.value.trim();
-
-      if (!videoLink) {
-        alert("有効なYouTubeリンクを入力してください。");
+      if (!originalLink) {
+        alert("有効なURLを入力してください。");
         return;
       }
 
-      // Googleリダイレクトリンクを処理してYouTubeリンクに変換
-      let decodedLink = videoLink;
-      const googleMatch = videoLink.match(/https:\/\/www\.google\.com\/url\?.*?[&?]q=([^&]+)/);
-      if (googleMatch) {
-        decodedLink = decodeURIComponent(googleMatch[1]);
+      // Googleリダイレクトリンクを処理して実際のリンクを抽出
+      const googleMatch = originalLink.match(/https:\/\/www\.google\.com\/url\?.*?[&?]q=([^&]+)/);
+      const finalLink = googleMatch ? decodeURIComponent(googleMatch[1]) : originalLink;
+
+      // URLがYouTubeの場合
+      if (finalLink.match(/(?:https?:\/\/)?(?:www\.)?(youtube\.com\/watch\?v=|youtu\.be\/)/)) {
+        const videoID = finalLink.match(/(?:watch\?v=|youtu\.be\/)([^&?]+)/)[1];
+        embedContainer.innerHTML = `
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/${videoID}"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        `;
+      }
+      // URLがTwitterの場合
+      else if (finalLink.match(/(?:https?:\/\/)?(?:www\.)?twitter\.com\/.+\/status\/\d+/)) {
+        embedContainer.innerHTML = `
+          <blockquote class="twitter-tweet">
+            <a href="${finalLink}"></a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        `;
+      }
+      // その他のURL
+      else {
+        embedContainer.innerHTML = `
+          <p>リンク先を開くには以下をクリックしてください：</p>
+          <a href="${finalLink}" target="_blank" rel="noopener noreferrer">${finalLink}</a>
+        `;
       }
 
-      // YouTubeリンクから動画IDを抽出
-      const youtubeMatch = decodedLink.match(/(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/watch\?v=|youtu\.be\/)([^&?/]+)/);
-      const videoID = youtubeMatch ? youtubeMatch[1] : null;
-
-      if (!videoID) {
-        alert("無効なYouTubeリンクです。もう一度お試しください。");
-        return;
-      }
-
-      // ローカルストレージにリンクを保存
-      localStorage.setItem("youtubeLink", decodedLink);
-
-      // 動画を表示
-      videoContainer.innerHTML = `
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/${videoID}"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      `;
       input.value = ""; // 入力欄をクリア
     }
   </script>
